--- a/PONTI.Final2018.cbp
+++ b/PONTI.Final2018.cbp
@@ -47,6 +47,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="Menu.h" />
+		<Unit filename="Producto.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Producto.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
